--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack --watch",
+    "serv": "static build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "html-webpack-plugin": "^2.28.0",
+    "node-static": "^0.7.9",
     "webpack": "^2.6.0"
   }
 }
