--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.2",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "node-static": "^0.7.9",
+    "postcss": "^6.0.1",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.5",
+    "style-loader": "^0.18.1",
     "webpack": "^2.6.0",
     "webpack-dev-server": "^2.4.5",
     "webpack-merge": "^4.1.0"
