--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-loader": "^2.0.5",
     "style-loader": "^0.18.1",
     "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony-v2.8.22",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "^2.6.0",
     "webpack-dev-server": "^2.4.5",
     "webpack-merge": "^4.1.0"
