--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
@@ -25,6 +26,8 @@
     "postcss-cssnext": "^2.11.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.18.1",
     "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony-v2.8.22",
@@ -34,7 +37,6 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "babel-preset-stage-2": "^6.24.1",
     "immutability-helper": "^2.2.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
