--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --env development",
-    "build": "webpack --env production",
+    "start": "webpack-dev-server --config webpack/webpack.config.js --env development",
+    "build": "webpack --config webpack/webpack.config.js --env production",
     "serv": "static build"
   },
   "author": "",
