--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "node-static": "^0.7.9",
     "postcss": "^6.0.1",
     "postcss-cssnext": "^2.11.0",
+    "postcss-custom-properties": "^6.0.1",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
+    "postcss-nested": "^2.0.2",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-svg-loader": "^1.1.1",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.18.1",
+    "svg-inline-loader": "^0.7.1",
+    "svg-react-loader": "^0.3.7",
     "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony-v2.8.22",
     "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "^2.6.0",
