--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.1",
@@ -23,17 +24,14 @@
     "html-webpack-plugin": "^2.28.0",
     "node-static": "^0.7.9",
     "postcss": "^6.0.1",
-    "postcss-cssnext": "^2.11.0",
-    "postcss-custom-properties": "^6.0.1",
+    "postcss-css-variables": "^0.7.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
     "postcss-nested": "^2.0.2",
     "react-hot-loader": "^3.0.0-beta.7",
-    "react-svg-loader": "^1.1.1",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.18.1",
-    "svg-inline-loader": "^0.7.1",
     "svg-react-loader": "^0.3.7",
     "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony-v2.8.22",
     "uglifyjs-webpack-plugin": "^0.4.3",
@@ -42,7 +40,6 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "immutability-helper": "^2.2.2",
     "normalize.css": "^7.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
