--- a/.babelrc
+++ b/.babelrc
@@ -8,8 +8,7 @@
     "stage-0"
   ],
   "plugins": [
-    "react-hot-loader/babel",
-    "transform-runtime"
+    "react-hot-loader/babel"
   ],
   "env": {
     "modules": false
