--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,8 @@
     "stage-0"
   ],
   "plugins": [
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
+    "transform-async-to-generator"
   ],
   "env": {
     "modules": false
