--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^2.28.0",
     "node-static": "^0.7.9",
     "postcss": "^6.0.1",
+    "postcss-apply": "^0.8.0",
     "postcss-css-variables": "^0.7.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
