--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "webpack-app",
+  "name": "react-app-constructor",
   "version": "1.0.0",
-  "description": "",
+  "description": "Каркас для разработки ReactJS приложения",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack/webpack.config.js --env development",
     "build": "webpack --config webpack/webpack.config.js --env production",
     "serv": "static build"
   },
-  "author": "",
+  "author": "Hazrat Gadjikerimov",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^7.1.1",
