--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.18.1",
     "svg-react-loader": "^0.3.7",
+    "svgo": "^0.7.2",
+    "svgo-loader": "^1.2.1",
     "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony-v2.8.22",
     "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "^2.6.0",
