Добавлена поддержка csso

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.2",
+    "csso": "^3.1.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.7.1",
@@ -35,6 +36,7 @@
     "postcss": "^6.0.1",
     "postcss-apply": "^0.8.0",
     "postcss-css-variables": "^0.7.0",
+    "postcss-csso": "^2.0.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
     "postcss-nested": "^2.0.2",
