--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "normalize.css": "^7.0.0",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
