--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "node-static": "^0.7.9",
+    "open-browser-webpack-plugin": "0.0.5",
     "postcss": "^6.0.1",
     "postcss-apply": "^0.8.0",
     "postcss-css-variables": "^0.7.0",
