--- a/package.json
+++ b/package.json
@@ -11,58 +11,57 @@
   "author": "Hazrat Gadjikerimov",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-preset-env": "^1.5.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.2",
-    "csso": "^3.1.1",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-node": "^5.0.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.0.1",
-    "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
-    "node-static": "^0.7.9",
+    "csso": "3.5.0",
+    "css-loader": "0.28.9",
+    "autoprefixer": "7.2.5",
+    "babel-preset-env": "1.6.1",
+    "babel-core": "6.26.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-loader": "7.1.2",
+    "eslint": "3.19.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-node": "5.2.1",
+    "eslint-plugin-promise": "3.6.0",
+    "eslint-plugin-react": "7.6.0",
+    "eslint-plugin-standard": "3.0.1",
+    "extract-text-webpack-plugin": "2.1.2",
+    "file-loader": "0.11.2",
+    "html-webpack-plugin": "2.30.1",
+    "node-static": "0.7.10",
+    "postcss": "6.0.16",
+    "postcss-apply": "0.8.0",
+    "postcss-css-variables": "0.7.0",
+    "postcss-csso": "2.0.0",
+    "postcss-loader": "2.0.10",
+    "postcss-import": "10.0.0",
+    "react-hot-loader": "3.1.3",
+    "postcss-nested": "2.1.2",
+    "redux-devtools-extension": "2.13.2",
+    "redux-thunk": "2.2.0",
+    "style-loader": "0.18.2",
+    "svg-react-loader": "0.4.5",
+    "svgo": "0.7.2",
+    "uglifyjs-webpack-plugin": "0.4.6",
+    "webpack-merge": "4.1.1",
+    "webpack-dev-server": "2.11.1",
+    "webpack": "3.10.0",
     "open-browser-webpack-plugin": "0.0.5",
-    "postcss": "^6.0.1",
-    "postcss-apply": "^0.8.0",
-    "postcss-css-variables": "^0.7.0",
-    "postcss-csso": "^2.0.0",
-    "postcss-import": "^10.0.0",
-    "postcss-loader": "^2.0.5",
-    "postcss-nested": "^2.0.2",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0",
-    "style-loader": "^0.18.1",
-    "svg-react-loader": "^0.4.3",
-    "svgo": "^0.7.2",
-    "svgo-loader": "^1.2.1",
-    "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony-v2.8.22",
-    "uglifyjs-webpack-plugin": "^0.4.3",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-merge": "^4.1.0"
+    "svgo-loader": "1.2.1",
+    "uglify-js": "2.8.22"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "normalize.css": "^7.0.0",
-    "prop-types": "^15.5.10",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "react": "16.2.0",
+    "babel-polyfill": "6.26.0",
+    "react-router-dom": "4.2.2",
+    "prop-types": "15.6.0",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2",
+    "normalize.css": "7.0.0",
+    "react-dom": "16.2.0"
   }
 }
