Добавил Декораторы (stage-2), но пока ESlint ругается на него

--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
     "stage-0"
   ],
   "plugins": [
+    "transform-decorators-legacy",    
     "react-hot-loader/babel",
     "transform-async-to-generator"
   ],
