--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+  "parser": "babel-eslint",
   "extends": ["standard"],
   "plugins": [
     "standard",
@@ -12,6 +13,7 @@
   },
   "rules": {
     "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "react/jsx-uses-vars": "error",
+    "strict": 0
   }
 }
