--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
     "build": "webpack --config webpack/webpack.config.js --env production",
     "serv": "static build"
   },
+  "standard": {
+    "parser": "babel-eslint"
+  },
   "author": "Hazrat Gadjikerimov",
   "license": "ISC",
   "devDependencies": {
-    "csso": "3.5.0",
-    "css-loader": "0.28.9",
     "autoprefixer": "7.2.5",
-    "babel-preset-env": "1.6.1",
     "babel-core": "6.26.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "css-loader": "0.28.9",
+    "csso": "3.5.0",
     "eslint": "3.19.0",
     "eslint-config-standard": "10.2.1",
     "eslint-loader": "1.9.0",
@@ -32,26 +37,26 @@
     "file-loader": "0.11.2",
     "html-webpack-plugin": "2.30.1",
     "node-static": "0.7.10",
+    "open-browser-webpack-plugin": "0.0.5",
     "postcss": "6.0.16",
     "postcss-apply": "0.8.0",
     "postcss-css-variables": "0.7.0",
     "postcss-csso": "2.0.0",
-    "postcss-loader": "2.0.10",
     "postcss-import": "10.0.0",
-    "react-hot-loader": "3.1.3",
+    "postcss-loader": "2.0.10",
     "postcss-nested": "2.1.2",
+    "react-hot-loader": "3.1.3",
     "redux-devtools-extension": "2.13.2",
     "redux-thunk": "2.2.0",
     "style-loader": "0.18.2",
     "svg-react-loader": "0.4.5",
     "svgo": "0.7.2",
-    "uglifyjs-webpack-plugin": "0.4.6",
-    "webpack-merge": "4.1.1",
-    "webpack-dev-server": "2.11.1",
-    "webpack": "3.10.0",
-    "open-browser-webpack-plugin": "0.0.5",
     "svgo-loader": "1.2.1",
-    "uglify-js": "2.8.22"
+    "uglify-js": "2.8.22",
+    "uglifyjs-webpack-plugin": "0.4.6",
+    "webpack": "3.10.0",
+    "webpack-dev-server": "2.11.1",
+    "webpack-merge": "4.1.1"
   },
   "dependencies": {
     "whatwg-fetch": "2.0.3",
