--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-import": "10.0.0",
     "postcss-loader": "2.0.10",
     "postcss-nested": "2.1.2",
+    "react-css-modules": "^4.7.1",
     "react-hot-loader": "3.1.3",
     "redux-devtools-extension": "2.13.2",
     "redux-thunk": "2.2.0",
