--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "babel-core": "6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "1.6.1",
-    "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "css-loader": "0.28.9",
     "csso": "3.5.0",
-    "eslint": "3.19.0",
-    "eslint-config-standard": "10.2.1",
+    "eslint": "4.15.0",
+    "eslint-config-standard": "11.0.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-node": "5.2.1",
@@ -68,6 +68,9 @@
     "react-redux": "5.0.6",
     "redux": "3.7.2",
     "normalize.css": "7.0.0",
-    "react-dom": "16.2.0"
+    "react-dom": "16.2.0",
+    "kurtuba-client": "^1.0.4",
+    "socket.io-client": "^2.0.4",
+    "moment": "^2.20.1"
   }
 }
