--- a/package.json
+++ b/package.json
@@ -60,17 +60,18 @@
     "webpack-merge": "4.1.1"
   },
   "dependencies": {
-    "whatwg-fetch": "2.0.3",
-    "react": "16.2.0",
     "babel-polyfill": "6.26.0",
-    "react-router-dom": "4.2.2",
-    "prop-types": "15.6.0",
-    "react-redux": "5.0.6",
-    "redux": "3.7.2",
-    "normalize.css": "7.0.0",
-    "react-dom": "16.2.0",
     "kurtuba-client": "^1.0.4",
+    "moment": "^2.20.1",
+    "normalize.css": "7.0.0",
+    "prop-types": "15.6.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-redux": "5.0.6",
+    "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
     "socket.io-client": "^2.0.4",
-    "moment": "^2.20.1"
+    "url-loader": "^1.0.1",
+    "whatwg-fetch": "2.0.3"
   }
 }
