add static folder

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
+    "copy-webpack-plugin": "^4.5.2",
     "kurtuba-client": "^1.0.4",
     "moment": "^2.20.1",
     "normalize.css": "7.0.0",
