--- a/package.json
+++ b/package.json
@@ -57,22 +57,21 @@
     "uglifyjs-webpack-plugin": "0.4.6",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.11.1",
-    "webpack-merge": "4.1.1"
+    "webpack-merge": "4.1.1",
+    "copy-webpack-plugin": "^4.5.2",
+    "url-loader": "^1.0.1",
+    "prop-types": "15.6.0"
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
-    "copy-webpack-plugin": "^4.5.2",
-    "kurtuba-client": "^1.0.4",
-    "moment": "^2.20.1",
+    "moment": "^2.22.2",
     "normalize.css": "7.0.0",
-    "prop-types": "15.6.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-redux": "5.0.6",
-    "react-router-dom": "4.2.2",
-    "redux": "3.7.2",
-    "socket.io-client": "^2.0.4",
-    "url-loader": "^1.0.1",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.3.1",
+    "redux": "4.0.0",
+    "styled-components": "^3.3.3",
     "whatwg-fetch": "2.0.3"
   }
 }
