--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack/webpack.config.js --env development",
     "build": "webpack --config webpack/webpack.config.js --env production",
+    "server": "NODE_ENV=production node ./server/index.js",
     "serv": "static build"
   },
   "standard": {
@@ -18,11 +19,16 @@
     "babel-core": "6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "7.1.2",
+    "babel-plugin-dynamic-import-node": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "compression-webpack-plugin": "^1.1.11",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "0.28.9",
     "csso": "3.5.0",
     "eslint": "4.15.0",
@@ -33,9 +39,15 @@
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-react": "7.6.0",
     "eslint-plugin-standard": "3.0.1",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
+    "forcedomain": "^1.0.0",
     "html-webpack-plugin": "2.30.1",
+    "ignore-styles": "^5.0.1",
+    "md5-file": "^4.0.0",
+    "moment": "^2.22.2",
+    "morgan": "^1.9.0",
     "node-static": "0.7.10",
     "open-browser-webpack-plugin": "0.0.5",
     "postcss": "6.0.16",
@@ -45,6 +57,7 @@
     "postcss-import": "10.0.0",
     "postcss-loader": "2.0.10",
     "postcss-nested": "2.1.2",
+    "prop-types": "15.6.0",
     "react-css-modules": "^4.7.1",
     "react-hot-loader": "3.1.3",
     "redux-devtools-extension": "2.13.2",
@@ -55,20 +68,22 @@
     "svgo-loader": "1.2.1",
     "uglify-js": "2.8.22",
     "uglifyjs-webpack-plugin": "0.4.6",
+    "url-loader": "^1.0.1",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.11.1",
-    "webpack-merge": "4.1.1",
-    "copy-webpack-plugin": "^4.5.2",
-    "url-loader": "^1.0.1",
-    "prop-types": "15.6.0"
+    "webpack-merge": "4.1.1"
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
-    "compression-webpack-plugin": "^1.1.11",
-    "moment": "^2.22.2",
+    "connected-react-router": "^4.4.1",
+    "cookie-parser": "^1.4.3",
+    "history": "^4.7.2",
     "normalize.css": "7.0.0",
     "react": "16.4.2",
     "react-dom": "16.4.2",
+    "react-frontload": "^1.0.2",
+    "react-helmet": "^5.2.0",
+    "react-loadable": "^5.5.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "redux": "4.0.0",
