--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack/webpack.config.js --env development",
-    "build": "webpack --config webpack/webpack.config.js --env production",
+    "build": "webpack --mode production --config webpack/webpack.config.js --env production",
     "server": "NODE_ENV=production node ./server/index.js",
     "serv": "static build"
   },
@@ -33,17 +33,17 @@
     "csso": "3.5.0",
     "eslint": "4.15.0",
     "eslint-config-standard": "11.0.0",
-    "eslint-loader": "1.9.0",
+    "eslint-loader": "^2.1.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-node": "5.2.1",
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-react": "7.6.0",
     "eslint-plugin-standard": "3.0.1",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "2.1.2",
-    "file-loader": "0.11.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
     "forcedomain": "^1.0.0",
-    "html-webpack-plugin": "2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
     "md5-file": "^4.0.0",
     "moment": "^2.22.2",
@@ -67,9 +67,10 @@
     "svgo": "0.7.2",
     "svgo-loader": "1.2.1",
     "uglify-js": "2.8.22",
-    "uglifyjs-webpack-plugin": "0.4.6",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.0.1",
-    "webpack": "3.10.0",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "2.11.1",
     "webpack-merge": "4.1.1"
   },
