--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Webpack конфигурация для разработки React приложения",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack/webpack.config.js --env development",
+    "start": "webpack-dev-server --config webpack/webpack.config.js --mode development --env development",
     "build": "webpack --mode production --config webpack/webpack.config.js --env production",
     "server": "NODE_ENV=production node ./server/index.js",
     "serv": "static build"
@@ -71,7 +71,7 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "2.11.1",
+    "webpack-dev-server": "^3.1.5",
     "webpack-merge": "4.1.1"
   },
   "dependencies": {
